--- a/src/pages/not-singed-home/not-singed-home.scss
+++ b/src/pages/not-singed-home/not-singed-home.scss
@@ -1,5 +1,5 @@
 page-not-singed-home {
   .not-signed-in-home__header-image-wrapper img {
-    height: $toolbar-ios-height;
+    height: $toolbar-ios-height / 1.3;
   }
 }
