--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -2,4 +2,18 @@ page-home {
   .home__header-image-wrapper img {
     height: $toolbar-ios-height / 1.3;
   }
+  .home__coin-price-list-perecent-plus {
+    width: 8rem;
+    height: 2rem;
+    text-align: center;
+    color: #ffffff;
+    background-color: #32db64;
+  }
+  .home__coin-price-list-perecent-minus {
+    width: 8rem;
+    height: 2rem;
+    text-align: center;
+    color: #ffffff;
+    background-color: #f53d3d;
+  }
 }
