#14 の変更を適用 #13
コピペ実装なので、将来的に
コンポーネントとかにくくり出した方がいい気がする

--- a/src/pages/user-articles-view/user-articles-view.scss
+++ b/src/pages/user-articles-view/user-articles-view.scss
@@ -26,4 +26,24 @@ page-user-articles-view {
       }
     }
   }
+
+  .reaction-button {
+    background-color: lightgray;
+  }
+
+  .good {
+    color: gray;
+  }
+  .bad {
+    color: gray;
+  }
+
+  .pushed-good {
+    background-color: color($colors, primary);
+    color: #ffffff;
+  }
+  .pushed-bad {
+    background-color: color($colors, danger);
+    color: #ffffff;
+  }
 }
