--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -29,7 +29,7 @@ $app-direction: ltr;
 
 $colors: (
         primary: #ff8000,
-        secondary: #32db64,
+        secondary: #0080ff,
         danger: #f53d3d,
         light: #f4f4f4,
         dark: #222,
