キャッチアップ画面のPCビューでのボタンの見た目に問題があったのを修正
ホバー時に色が変わってしまっていた。

Co-authored-by: seriousfuzzy <seriousfuzzy1211@gmail.com>
Co-authored-by: billmbowling3 <billmbowling3@gmail.com>

--- a/src/pages/articles-view/articles-view.scss
+++ b/src/pages/articles-view/articles-view.scss
@@ -29,21 +29,25 @@ page-articles-view {
 
   .reaction-button {
     background-color: lightgray;
+    &:hover {
+      background-color: lightgray;
+    }
   }
 
   .good {
-    color:gray;
+    color: gray;
   }
   .bad {
-    color:gray;
+    color: gray;
   }
 
   .pushed-good {
-    background-color: color($colors, good);
+    background-color: color($colors, good) !important;
     color: #ffffff;
   }
+
   .pushed-bad {
-    background-color: color($colors, bad);
+    background-color: color($colors, bad) !important;
     color: #ffffff;
   }
 }
