記事投稿画面にサイトタイトルとサイト名の追加

--- a/src/pages/articles-view/articles-view.scss
+++ b/src/pages/articles-view/articles-view.scss
@@ -27,6 +27,24 @@ page-articles-view {
     }
   }
 
+  a {
+    text-decoration: none !important;
+  }
+
+  .site-info-wrapper {
+    padding: 20px 10px;
+
+    & .site-name {
+      display: block;
+    }
+
+    & .site-title {
+      color: #4e4e4e;
+      font-size: 1.4rem;
+      white-space: normal !important;
+    }
+  }
+
   .reaction-button {
     background-color: lightgray;
     &:hover {
