ログアウトの実装
Co-authored-by: seriousfuzzy <seriousfuzzy1211@gmail.com>
Co-authored-by: billmbowling3 <billmbowling3@gmail.com>

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -21,6 +21,9 @@
                 {{p.title}}
             </button>
         </ion-list>
+        <ion-list class="menu-list">
+            <button ion-item (click)="logout()">ログアウト</button>
+        </ion-list>
     </ion-content>
 
 </ion-menu>
